# hetero-ai-processor

./: .gitignore  LICENSE  README.md
docs/: GETTING_STARTED.md
docs/architecture/: system_overview.md  tensor_core_spec.md  vector_core_spec.md
docs/design_decisions/: week1_decisions.md
rtl/common/: test_adder.v  test_adder.vvp  test_adder_tb.v
sim/cpp_model/: CMakeLists.txt
sim/cpp_model/include/: common_types.h  interconnect.h  memory.h  scheduler.h  tensor_core.h  vector_core.h
sim/cpp_model/src/: common_types.cpp  main.cpp  memory.cp  scheduler.cpp  tensor_core.cpp  test.cpp  vector_core.cpp
tools/scripts/: build_all.sh  clean_all.sh  quick_test.sh  run_benchmarks.sh
